[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["namingbe <namingbe@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/namingbe/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

